Fix cat alignment

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -25,7 +25,7 @@ body {
 	flex-direction: column;
 	@media (min-width: 768px) {
 		// prevent scroll on desktop
-		overflow: hidden; margin: 0; height: 100%;
+		// overflow: hidden; margin: 0; height: 100%;
 	}
 	a {
 		text-decoration: none;
@@ -100,6 +100,11 @@ body {
 		@media (max-width: 768px) {
 			flex-direction: column;
 			padding: 0 10%;
+		}
+		@media (min-width: 768px) {
+			position:fixed;
+			bottom: 0px;
+			width: 100%;
 		}
 	}
 }
@@ -176,7 +181,7 @@ body {
 }
 
 #cat {
-	position: fixed; /* Or absolute if needed */
+	position: absolute; /* Or absolute if needed */
 	top: 0;
 	left: 0;
 	width: 100%;
